turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:55: error: Unmatched closing brace '}' ignored here
  rule=Array(Array(Array(1,LEFT,0),Array(1,LEFT,1)),Array(Array(0,NOTURN,0),Array(0,NOTURN,1)))}
                                                                                               ^